--- a/index.html
+++ b/index.html
@@ -2,48 +2,55 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+</head> 
 <body>
-    <nav class="nav.navbar nav-expand-lg bg-body-tertiary mb-4 bg-light">
-        <div class="container">
-            <a href="#" class="navbar-brand">MC Carol</a>
-        <div class="collapse navbar-collapse" >
-            <ul class="navbar-nav me-auto mb-b mb-lg-0">
-   
-           <ul class="navbar-nav"></ul>
-           <li class="nav-item">
-               <a href="index.html" class="nav-link active">Home</a>
-           </li>
-           <li class="nav-item">
-               <a href="sobre-nos.html" class="nav-link">Sobre Nós</a>
-           </li>
-           <li class="nav-item">
-               <a href="contato.html" class="nav-link ">Contato</a>
-           </li>
-       </nav>
-   </div>
-</div>
-
-    <div class="container-fluid">
-        <div class="row">
-        <div class="col-6 bg-primary">1</div>
-        <div class="col-3 bg-warning">2</div>
-        <div class="col-3 bg-danger">3</div>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@500&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>home</title>
+<body>
+    <header>
+        <div class="logo">
+            <img src="imagens/Story_instagram_filme_boneca_minimalista_rosa_e_branco__1_-removebg-preview.png" alt="Logo da Barbie">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre-nos.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="banner">
+        <img src="imagens/Banner para Site Mês dos Pais com Descontos Fotográfico Azul Escuro.gif" alt="Banner da Barbie">
     </div>
-</div>
-<footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pd-3 mb-3">
-        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="sobre-nos.html" class="nav-link">Sobre Nos</a></li>
-        <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></nav>
-    </ul>
-    <p class="text-center text-muted">&copy; 2023 etec jk, terceirão ppp</p>
-</footer>
-
-<button class="btn btn-primary">Enviar</button>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <div class="destaques">
+        <div class="destaque">
+            <img src="imagens/barbir_1-removebg-preview.png" alt="Destaque 1">
+            <div class="texto-destaque">
+                <p>Barbie Bailarina</p>
+            </div>
+        </div>
+        <div class="destaque">
+            <img src="imagens/barbie2-removebg-preview.png" alt="Destaque 2">
+            <div class="texto-destaque">
+                <p>Barbie Rock Star</p>
+            </div>
+        </div>
+        <div class="destaque">
+            <img src="imagens/barbie3-removebg-preview.png" alt="Destaque 3">
+            <div class="texto-destaque">
+                <p>Barbie Escolas de Pricesas</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
