--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -3,47 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/sobre.css">
+    <title>Sobre</title>
+
 </head>
 <body>
-    <nav class="nav.navbar nav-expand-lg bg-body-tertiary mb-4 bg-light">
-        <div class="container">
-            <a href="#" class="navbar-brand">MC Carol</a>
-        <div class="collapse navbar-collapse" >
-            <ul class="navbar-nav me-auto mb-b mb-lg-0">
-   
-           <ul class="navbar-nav"></ul>
-           <li class="nav-item">
-               <a href="index.html" class="nav-link ">Home</a>
-           </li>
-           <li class="nav-item">
-               <a href="sobre-nos.html" class="nav-link active">Sobre Nós</a>
-           </li>
-           <li class="nav-item">
-               <a href="contato.html" class="nav-link ">Contato</a>
-           </li>
-       </nav>
-   </div>
+    <header>
+        <div class="logo">
+            <img src="imagens/Story_instagram_filme_boneca_minimalista_rosa_e_branco__1_-removebg-preview.png" alt="Logo da Barbie">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre-nos.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+<div class="container-sobre">
+    <h5>
+		<br>Segundo a lenda, na ocasião a criadora do sucesso ficou 
+		<br>intrigada com uma boneca de aparência e características mais adultas
+		<br>que fugia do padrão de bonecas bebês da época. Com isso, teria surgido a ideia de fabricar Barbie da forma que conhecemos.
+    </h5>
 </div>
 
-    <div class="container-fluid">
-        <div class="row">
-        <div class="col-6 bg-primary">1</div>
-        <div class="col-3 bg-warning">2</div>
-        <div class="col-3 bg-danger">3</div>
+<br><br><br><br><h1>Filmes de Sucessos</h1>
+
+
+
+<div class="container-card">
+    <div class="card">
+        <div class="img">
+            <img src="imagens/castelo.jpg" alt="" width="80%" style="border-radius: 8%;">
+        </div> 
+    <div class="content">
+        <p class="desc">Castelo de Diamante
+			<br>
+			Barbie e Teresa contam-nos o conto de fadas de Liana e Alexa, duas melhores amigas que partilham tudo, incluindo a sua paixão pela música. Um dia, as suas simples vidas mudam quando lhes oferecem um espelho encantado e decidem ajudar uma rapariga que está presa lá dentro. 
+    </div>
+    <div class="arrow">
+        <span>&#8673;</span>
+    </div>
+    </div>
+   
+    <div class="card">
+        <div class="img1">
+            <img src="imagens/pricesa e plebleia.jpg" alt="" width="80%" style="border-radius: 8%;" >
+        </div> 
+    <div class="content">
+        <p class="desc">Uma plebeia, moradora de um vilarejo, é muito parecida com a princesa do reino. Os destinos das duas se cruzam quando a princesa é sequestrada, e a moça humilde usa sua incrível semelhança com ela para tentar salvar das mãos do vilão.</p>
+    </div>
+    <div class="arrow">
+        <span>&#8673;</span>
+    </div>
+    </div>
+   
+    <div class="card">
+        <div class="img2">
+            <img src="imagens/prices.jpg" alt="" width="80%" style="border-radius: 8%;" >
+
+        </div> 
+    <div class="content">
+        <p class="desc">Depois de sobreviver a um naufrágio, a pequena princesa Rosella cresce em uma ilha deserta, onde é acolhida e criada por uma família de animais. Dez anos depois, o príncipe Antonio descobre a ilha e convida Rosella para acompanhá-lo até o seu reino.</p>
+    </div>
+    <div class="arrow">
+        <span>&#8673;</span>
+    </div>
     </div>
 </div>
-<footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pd-3 mb-3">
-        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="sobre-nos.html" class="nav-link">Sobre Nos</a></li>
-        <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></nav>
-    </ul>
-    <p class="text-center text-muted">&copy; 2023 etec jk, terceirão ppp</p>
-</footer>
 
-<button class="btn btn-primary">Enviar</button>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
-</html>
+<div class="container-card">
+    <div class="card">
+        <div class="img">
+            <img src="imagens/magia.jpg" alt="" width="80%" style="border-radius: 8%;">
+        </div> 
+    <div class="content">
+        <p class="desc">
+			<br>
+			Ao completar 17 anos, a princesa Anika é pedida em casamento por um bruxo malvado e, diante de sua recusa, ele transforma os pais da moça e todos os súditos do reino em estátuas de gelo. Um cavalo alado aparece para ajudá-la a quebrar o feitiço.
+		</p>
+    </div>
+    <div class="arrow">
+        <span>&#8673;</span>
+    </div>
+    </div>
+   
+    <div class="card">
+        <div class="img1">
+            <img src="imagens/lago.jpg" alt="" width="80%" style="border-radius: 8%;" >
+        </div> 
+    <div class="content">
+        <p class="desc">O roteiro conta a história da princesa Odette que sofreu um feitiço de Von Rothbart para que ficasse prisioneira no corpo de um cisne branco para sempre. De dia, a princesa vivia no lago feito com as lágrimas de sua mãe e, em algumas horas da noite, ela se libertava e podia viver como humana.</p>
+    </div>
+    <div class="arrow">
+        <span>&#8673;</span>
+    </div>
+    </div>
+   
+    <div class="card">
+        <div class="img2">
+            <img src="imagens/balarina.jpg" alt="" width="80%" style="border-radius: 8%;" >
+
+        </div> 
+    <div class="content">
+        <p class="desc">O conto “As Doze Princesas Dançarinas” registrado da tradição oral pelos Irmãos Grimm, conta a história de um rei que tinha 12 filhas, que a cada manhã estavam com seus sapatos gastos, “como se elas com eles tivessem passado a noite a dançar”</p>
+    </div>
+    <div class="arrow">
+        <span>&#8673;</span>
+    </div>
+    </div>
+</div>
+<div class="container-titulo">
+<h6>Hístoria</h6>
+</div>
+
+<div class="container-historia">
+    <h5>
+		A inspiração para a criação da Barbie veio quando Ruth Handler observou sua filha Barbara brincando com bonecas e imaginando papéis adultos para elas. Percebendo a falta de bonecas realistas no mercado, Ruth decidiu criar uma boneca que pudesse representar as aspirações e sonhos das meninas. Assim nasceu a Barbie, uma boneca elegante, confiante e independente.
+		Ao longo dos anos, a Barbie passou por diversas transformações, refletindo as mudanças da sociedade e abraçando a diversidade. Desde suas roupas e acessórios até sua variedade de carreiras, a Barbie sempre esteve à frente de seu tempo. Ela se tornou uma astronauta, médica, engenheira, empresária e inspirou milhões de meninas a acreditarem em seu potencial.
+		A Barbie não é apenas uma boneca, mas também uma fonte de inspiração e empoderamento para muitas pessoas. Ela desafiou os estereótipos de gênero, encorajando meninas a sonhar alto e acreditar que podem alcançar qualquer objetivo que desejarem. A Barbie também promoveu a inclusão ao lançar bonecas de diferentes etnias, tipos de corpo e habilidades, promovendo a ideia de que a beleza está na diversidade.
+
+    </h5>
+</div>
